--- a/00_TF_fundamentals/00_tensorflow_fundamentals.ipynb
+++ b/00_TF_fundamentals/00_tensorflow_fundamentals.ipynb
@@ -11,7 +11,9 @@
         "NmKfOXUzX3gW",
         "9gCDwC5Iamvf",
         "p8L5IjRltkZJ"
-      ]
+      ],
+      "authorship_tag": "ABX9TyMd4Oc9y9GzwL/g4BFruEUB",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -22,6 +24,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/realtechz/Tensorflow_zero_to_mastery/blob/main/00_tensorflow_fundamentals.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -2159,6 +2171,15 @@
           },
           "execution_count": 149
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nK80KCubC1Tw"
+      },
+      "source": [
+        ""
       ]
     },
     {
