--- a/00_TF_fundamentals/00_tensorflow_fundamentals.ipynb
+++ b/00_TF_fundamentals/00_tensorflow_fundamentals.ipynb
@@ -31,7 +31,7 @@
         "colab_type": "text"
       },
       "source": [ 
-        "<a href=\"https://colab.research.google.com/github/realtechz/Tensorflow_zero_to_mastery/blob/00_TF_fundamentals/main/00_tensorflow_fundamentals.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://github.com/realtechz/Tensorflow_zero_to_mastery/blob/05eda77dc84add9a31ffef046f5920abe75dfd12/00_TF_fundamentals/00_tensorflow_fundamentals.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
