--- a/01_TF_regression/01_NN_regression_with_TF.ipynb
+++ b/01_TF_regression/01_NN_regression_with_TF.ipynb
@@ -587,7 +587,14 @@
         "id": "ofgKfJKlci2P"
       },
       "source": [
-        "## Improving our model"
+        "## Improving our model\n",
+        "\n",
+        "we can improve our model by altering the steps we took to create a model.\n",
+        "\n",
+        "1. **Creating a model** - here we might can add more layers, increase the number of hidden units\n",
+        "( also called neurons) within each of the hidden layers, change the activation function of each layer.\n",
+        "2. **Compiling the model**- here we might change the optimization function or prehaps the **learning rate** of the optimization function.\n",
+        "3.**Fitting a model** - here we might fit a model for more **epochs** ( leave it training for longer ) or on more data."
       ]
     },
     {
