--- a/01_TF_regression/01_NN_regression_with_TF.ipynb
+++ b/01_TF_regression/01_NN_regression_with_TF.ipynb
@@ -2106,13 +2106,315 @@
         "id": "VMifohC4r3-0"
       },
       "source": [
-        "### Evaluating our models prediction with regression evaluation metrics"
+        "### Evaluating our models prediction with regression evaluation metrics\n",
+        "\n",
+        "Alongisde visualizations, evaulation metrics are your alternative best option for evaluating your model.\n",
+        "\n",
+        "Depending on the problem you're working on, different models have different evaluation metrics.\n",
+        "\n",
+        "Two of the main metrics used for regression problems are:\n",
+        "\n",
+        "* **Mean absolute error (MAE)** - the mean difference between each of the predictions.\n",
+        "* **Mean squared error (MSE)** - the squared mean difference between of the predictions (use if larger errors are more detrimental than smaller errors).\n",
+        "The lower each of these values, the better.\n",
+        "\n",
+        "You can also use model.evaluate() which will return the loss of the model as well as any metrics setup during the compile step."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "iJ1_riVqxxhB"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iJ1_riVqxxhB",
+        "outputId": "a9535505-373b-4a3d-8e3d-3334a0829713"
+      },
+      "source": [
+        "# Evaluate the model on the test\n",
+        "model.evaluate(X_test,y_test)"
+      ],
+      "execution_count": 139,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1/1 [==============================] - 0s 113ms/step - loss: 3.1969 - mae: 3.1969\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[3.196946620941162, 3.196946620941162]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 139
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4Bw5wHWV08u8",
+        "outputId": "79c038a7-efec-4d2b-f3d1-527a80218f02"
+      },
+      "source": [
+        "# calcuate the mean absolute error instead of using evaluate method\n",
+        "mae = tf.metrics.mean_absolute_error(y_true=y_test, y_pred=y_pred)\n",
+        "mae"
+      ],
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(10,), dtype=float32, numpy=\n",
+              "array([17.558247, 14.116051, 11.708944, 10.336927, 10.      , 10.698161,\n",
+              "       12.447118, 15.333008, 19.253975, 23.841705], dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 143
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bgzabCaD1gdM",
+        "outputId": "7a0a24c9-72fa-4cb7-bc9a-185cfe186cf8"
+      },
+      "source": [
+        "y_pred"
+      ],
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 70.55219 ],\n",
+              "       [ 75.139915],\n",
+              "       [ 79.72764 ],\n",
+              "       [ 84.31536 ],\n",
+              "       [ 88.90308 ],\n",
+              "       [ 93.49081 ],\n",
+              "       [ 98.07853 ],\n",
+              "       [102.66626 ],\n",
+              "       [107.253975],\n",
+              "       [111.841705]], dtype=float32)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 144
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2y1vXZM41lPI",
+        "outputId": "8c5fe33c-4548-46e8-b78e-c1dc9ed65a55"
+      },
+      "source": [
+        "y_test"
+      ],
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(10,), dtype=int32, numpy=array([ 70,  74,  78,  82,  86,  90,  94,  98, 102, 106])>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 145
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0CUCxmVm2O2t",
+        "outputId": "0b6cae8e-f7af-46fd-9859-0a11f2739d47"
+      },
+      "source": [
+        "#notice how the the tensors are of not the same shape\n",
+        "# so first convert y_pred to tensor then we can squeeze it or reshape it\n",
+        "y_pred_tensor = tf.constant(y_pred)\n",
+        "y_pred_tensor"
+      ],
+      "execution_count": 147,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(10, 1), dtype=float32, numpy=\n",
+              "array([[ 70.55219 ],\n",
+              "       [ 75.139915],\n",
+              "       [ 79.72764 ],\n",
+              "       [ 84.31536 ],\n",
+              "       [ 88.90308 ],\n",
+              "       [ 93.49081 ],\n",
+              "       [ 98.07853 ],\n",
+              "       [102.66626 ],\n",
+              "       [107.253975],\n",
+              "       [111.841705]], dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 147
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oUOfExND2qN2",
+        "outputId": "b6b0ed60-0a0f-4c8f-9701-14a143e468ed"
+      },
+      "source": [
+        "y_pred_tensor_reshaped  = tf.reshape(y_pred_tensor,(10,))\n",
+        "# not we can use even the squeeze function\n",
+        "y_pred_tensor_reshaped "
+      ],
+      "execution_count": 153,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(10,), dtype=float32, numpy=\n",
+              "array([ 70.55219 ,  75.139915,  79.72764 ,  84.31536 ,  88.90308 ,\n",
+              "        93.49081 ,  98.07853 , 102.66626 , 107.253975, 111.841705],\n",
+              "      dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 153
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8H3-P7Rx20Z3",
+        "outputId": "2b12eb7d-532f-49ba-b2ce-144fe16d62d1"
+      },
+      "source": [
+        "# now lets pass this into the metrics to directly calculate the MAE\n",
+        "mae = tf.metrics.mean_absolute_error(y_true=y_test, y_pred=y_pred_tensor_reshaped)\n",
+        "mae"
+      ],
+      "execution_count": 154,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=float32, numpy=3.1969466>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 154
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "prqJPAu13d6Q",
+        "outputId": "c35716ec-50ac-4cf5-9a64-6a70830c6a75"
+      },
+      "source": [
+        "# calculate the mean square error\n",
+        "MSE = tf.metrics.mean_squared_error(y_true=y_test, y_pred=y_pred_tensor_reshaped)\n",
+        "MSE"
+      ],
+      "execution_count": 155,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=float32, numpy=13.070175>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 155
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "seoSw7hu3vmm"
+      },
+      "source": [
+        "def mae(y_test, y_pred):\n",
+        "  \"\"\"\n",
+        "  Calculuates mean absolute error between y_test and y_preds.\n",
+        "  \"\"\"\n",
+        "  return tf.metrics.mean_absolute_error(y_test,\n",
+        "                                        y_pred)\n",
+        "  \n",
+        "def mse(y_test, y_pred):\n",
+        "  \"\"\"\n",
+        "  Calculates mean squared error between y_test and y_preds.\n",
+        "  \"\"\"\n",
+        "  return tf.metrics.mean_squared_error(y_test,\n",
+        "                                       y_pred)"
+      ],
+      "execution_count": 156,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VA1QJyJqAILP"
       },
       "source": [
         ""
